--- a/styles.css
+++ b/styles.css
@@ -4,11 +4,22 @@ body {
     background-image: url("img/table.png");
     background-size: cover;
     text-align: center;
-    color: antiquewhite;
+    color: white;
 }
 
 h1 {
     color: goldenrod;
+}
+
+button {
+    color: #016f32;
+    width: 150px;
+    background: goldenrod;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    font-weight: bold;
+    border: none;
+    border-radius: 5px;
 }
 
 #message-el {
